2007-04-30  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>

	* configure.ac: 
	* unichrome/via_mode.c: 
	* unichrome/via_driver.c:
	* unichrome/via_driver.h:
	* unichrome/via_vt162x.c:
	* unichrome/via_i2c.c:
	* unichrome/via_id.c:
	* unichrome/Makefile.am:
	* unichrome/sil164/Makefile.am:
	* unichrome/sil164/Makefile.am:
	* unichrome/sil164/sil164.c:
	* unichrome/sil164/sil164.h:
	* unichrome/sil164/sil164_module.c:
	* unichrome/vt1632/sil164_reg.h:
	* unichrome/vt1632/vt1632.c:
	* unichrome/vt1632/vt1632.h:
	* unichrome/vt1632/vt1632_module.c:
	* unichrome/vt1632/vt1632_reg.h:

	Initial check in of Philip Prindeville's modular i2c
	adaption.

2007-04-30  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>

	* unichrome/via_swov.c: (Upd_Video):
	* unichrome/via_xvmc.c: (ViaInitXVMC):

	Disable interpolation when the source width is greater than 800, 
	otherwise the picture wraps around the screen. Bug #109
	Fix a typo in ViaInitXVMC. Bug #111

2007-03-28  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>

	* unichrome/via_bandwidth.c: (ViaSetPrimaryFIFO):
	* unichrome/via_swov.c: (viaWaitHQVFlip), (VIAVidHWDiffInit),
	(viaSetColorSpace), (ViaInitVideoStatusFlag), (ViaSetVidCtl),
	(SetFIFO_V3_64or32or32), (SetFIFO_V3_64or32or16), (SetColorKey),
	(SetChromaKey), (Upd_Video):
	* unichrome/via_video.c: (Flip), (viaDmaBlitImage), (viaPutImage):

	Fix Xv for CX700.

2007-03-20 Xavier Bachelot  <xavier-at-bachelot-dot-org>

	* unichrome/via_bandwidth.c: (ViaSetPrimaryFIFO),
	(ViaSetSecondaryFIFO):
	* unichrome/via_dri.c: (VIADRIRingBufferInit):
	* unichrome/via_driver.c:
	* unichrome/via_id.c:
	* unichrome/via_id.h:
	* unichrome/via_mode.c: (ViaGetMemoryBandwidth), (ViaModePrimary):
	* unichrome/via_mode.h:
	* unichrome/via_swov.c: (VIAVidHWDiffInit),
	(viaCalculateVideoColor), (viaSetColorSpace),
	(ViaInitVideoStatusFlag), (SetFIFO_V3), (SetFIFO_V3_64or32or32):
	* unichrome/via_video.c: (viaInitVideo):
	* unichrome/via_xvmc.c: (ViaInitXVMC):
