@@ -1,4 +1,10 @@
-2007-04-30  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>
+2007-05-04  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>
+
+	* unichrome/i2c_vid.h: 
+
+	Forgot to add this file.  fixed last changelog date.
+
+2007-05-04  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>
 
 	* configure.ac: 
 	* unichrome/via_mode.c: 
